--- a/amplify/.config/project-config.json
+++ b/amplify/.config/project-config.json
@@ -2,7 +2,7 @@
   "providers": [
     "awscloudformation"
   ],
-  "projectName": "flutterapp",
+  "projectName": "awsamplify",
   "version": "3.1",
   "frontend": "flutter",
   "flutter": {
