--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.aws_amplified">
+    package="com.example.aws_frame_account">
    <application
-        android:label="aws_amplified"
+        android:label="aws_frame_account"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
