--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dev_dependencies:
   fl_chart: ^0.60.0
   csv: ^5.0.1
   get:
+  provider: ^6.0.5
 
 
   # The "flutter_lints" package below contains a set of recommended lints to
