--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -1,10 +1,5 @@
 {
-  "analytics": {
-    "awsamplify": {
-      "providerPlugin": "awscloudformation",
-      "service": "Pinpoint"
-    }
-  },
+  "analytics": {},
   "auth": {
     "awsamplify": {
       "customAuth": false,
