--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dev_dependencies:
   csv: ^5.0.1
   get:
   provider: ^6.0.5
+  shared_preferences: ^2.1.2
 
 
   # The "flutter_lints" package below contains a set of recommended lints to
