--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dev_dependencies:
   get:
   provider: ^6.0.5
   shared_preferences: ^2.1.2
+  table_calendar: ^3.0.9
 
 
   # The "flutter_lints" package below contains a set of recommended lints to
