--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,7 @@ dev_dependencies:
   age_calculator: ^1.0.0
   datepicker_dropdown: ^0.0.7+5
   percent_indicator: ^4.2.3
+  back_button_interceptor: ^6.0.2
 
 
   # The "flutter_lints" package below contains a set of recommended lints to
